<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timePlanetScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tran_stars_galaxy"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/time_caption_value"
        android:textColor="#FFCCAA"
        android:textSize="25sp" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/earth"
        android:gravity="center" />

    <Button
        android:id="@+id/startServiceButton"
        android:textColor="#FFFFAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:text="@string/start_button_value" />

    <Button
        android:id="@+id/stopServiceButton"
        android:textColor="#FFFFAA"
        android:layout_marginTop="6dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_value" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/time_button_value"
        android:textColor="#FFCCAA" />

</LinearLayout>