<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/coloniesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_colonies"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/colonistsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_colonists"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/basesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_bases"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/militaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_military"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/ffonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_ffon"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/ffoffButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_ffoff"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_name_done"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextColonies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="12"
            android:gravity="center"
            android:inputType="number"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editTextColonists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="12"
            android:gravity="center"
            android:inputType="number"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editTextBases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="12"
            android:gravity="center"
            android:inputType="number"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editTextMilitary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="12"
            android:gravity="center"
            android:inputType="number"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editTextForcefieldOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="12"
            android:gravity="center"
            android:inputType="text"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editTextForcefieldOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:alpha="0.5"
            android:background="#FFFFFF"
            android:ems="12"
            android:gravity="center"
            android:inputType="text"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>